--- a/style.css
+++ b/style.css
@@ -9,31 +9,30 @@ nav{
 .leftnav{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 28px;
+    font-size: 2vw;
     font-weight: 800;
-    line-height: 33px;
+    line-height: 2.36vw;
     letter-spacing: 0%;
-    margin-top: 50px;
-    margin-left: 150px;  
+    margin-top: 3.57vw;
+    margin-left: 10.7vw;  
 }
 
 .rightnav{
-    margin-top: 38px;
-    margin-right: 166px; 
+    margin-top: 2.71vw;
+    margin-right: 11.86vw; 
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 20px;
+    font-size: 1.43vw;
     font-weight: 600;
-    line-height: 23px;
+    line-height: 1.64vw;
     letter-spacing: 0%;
     text-align: center;
-    padding: 17px 24px 17px 24px;
+    padding: 1.21vw 1.71vw 1.21vw 1.71vw;
     box-sizing: border-box;
-    border: 1px solid rgb(13, 19, 33);
-    border-radius: 8px;
+    border: 0.071vw solid rgb(13, 19, 33);
+    border-radius: 0.57vw;
     opacity: 0.8;
     cursor: pointer;
-
 }
 
 .banner{
@@ -42,11 +41,11 @@ nav{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 35px;
+    margin-top: 2.5vw;
 }
 
 .banner-content{
-    width: 1440px;
+    width: 102.86vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,57 +53,61 @@ nav{
 }
 
 .banner-image{
-    margin-top: 26px;
+    margin-top: 1.86vw;
+    width:17vw; 
+    height:17vw;
 }
 
 .banner-text{
-    width: 998px;
+    width: 71.29vw;
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 48px;
+    font-size: 3.43vw;
     font-weight: 800;
-    line-height: 50px;
+    line-height: 3.57vw;
     letter-spacing: 0%;
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 1.71vw;
 }
 
 .banner-description{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: center;
     opacity: 0.7;
-    margin-bottom: 32px;
+    margin-bottom: 2.29vw;
+    width: 71.29vw;
 }
 
 .black-btn{
     color: rgb(255, 255, 255);
     font-family: Azeret Mono;
-    font-size: 20px;
+    font-size: 1.43vw;
     font-weight: 600;
-    line-height: 23px;
+    line-height: 1.64vw;
     letter-spacing: 0%;
     text-align: center;
-    border-radius: 8px;
+    border-radius: 0.57vw;
     background: rgb(13, 19, 33);
-    padding: 21px 24px 21px 24px;
-    margin-bottom: 44px;
+    padding: 1.5vw 1.71vw 1.5vw 1.71vw;
+    margin-bottom: 3.14vw;
     cursor: pointer;
 }
 
 .purpose-container{
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: rgba(13, 19, 33, 0.05);
-    padding: 80px 97px 80px 97px;
-    margin-left: 148px;
-    margin-right: 152px;
-    margin-top: 74px;
-    margin-bottom: 88px;
+    padding: 5.71vw 6.93vw 5.71vw 6.93vw;
+    margin-left: 10.57vw;
+    margin-right: 10.86vw;
+    margin-top: 5.29vw;
+    margin-bottom: 6.29vw;
 }
+
 
 .purpose{
     display: flex;
@@ -112,156 +115,155 @@ nav{
     justify-content: center;
     align-items: center;
 }
+
 .p-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 32px;
+    font-size: 2.29vw;
     font-weight: 800;
-    line-height: 37px;
+    line-height: 2.64vw;
     letter-spacing: 0%;
     text-align: center;
-    margin-top: 80px;
-    margin-bottom: 24px;
+    margin-top: 5.71vw;
+    margin-bottom: 1.71vw;
 }
 
 .p-description{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: center;
     opacity: 0.7;
-    width: 852px;
-    margin-bottom: 48px;
+    width: 60.86vw;
+    margin-bottom: 3.43vw;
 }
 
 .do_change{
-    width: 946px;
-    border-radius: 16px;
+    width: 60vw;
+    border-radius: 1.14vw;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-    padding: 48px;
+    padding: 3.43vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
-    margin-bottom: 32px;
+    margin-bottom: 2.29vw;
 }
 
 .do_change-title{
     color: rgba(13, 19, 33, 0.7);
     font-family: Azeret Mono;
-    font-size: 24px;
+    font-size: 1.71vw;
     font-weight: 700;
-    line-height: 36px;
+    line-height: 2.57vw;
     letter-spacing: 0%;
     text-align: left;
-    width: 390px;
-    margin-bottom: 16px
+    width: 27.86vw;
+    margin-bottom: 1.14vw;
 }
 
 .do_change-description{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: left;
     opacity: 0.7;
-    width: 468px;
-    margin-bottom: 32px;
+    width: 33.43vw;
+    margin-bottom: 2.29vw;
 }
 
 .white_button{
     box-sizing: border-box;
-    border: 1px solid rgb(13, 19, 33);
+    border: 0.071vw solid rgb(13, 19, 33);
     opacity: 0.7;
-    padding: 12px 20px 12px 20px;
+    padding: 0.86vw 1.43vw 0.86vw 1.43vw;
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 20px;
+    font-size: 1.43vw;
     font-weight: 600;
-    line-height: 23px;
+    line-height: 1.64vw;
     letter-spacing: 0%;
     text-align: center;
     cursor: pointer;
 }
 
 .do_help{
-    width: 946px;
-    border-radius: 16px;
+    width: 60vw;
+    border-radius: 1.14vw;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
-    padding: 48px;
+    padding: 3.43vw;
     display: flex;
     align-items: center;
     margin: 0 auto;
-    gap: 80px;
-    margin-bottom: 32px;
+    gap: 2vw;
+    margin-bottom: 2.29vw;
 }
 
 .do_help-title{
     color: rgba(13, 19, 33, 0.7);
     font-family: Azeret Mono;
-    font-size: 24px;
+    font-size: 1.71vw;
     font-weight: 700;
-    line-height: 36px;
+    line-height: 2.57vw;
     letter-spacing: 0%;
     text-align: left;
-    width: 477px;
-    margin-bottom: 16px;
+    width: 34.07vw;
+    margin-bottom: 1.14vw;
 }
 
 .inspiration{
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     padding: 0px;
-
-
 }
 
 .ins-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 32px;
+    font-size: 2.29vw;
     font-weight: 800;
-    line-height: 37px;
+    line-height: 2.64vw;
     letter-spacing: 0%;
     text-align: center;
-    margin-bottom: 24px;
-
+    margin-bottom: 1.71vw;
 }
 
 .ins-description{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: center;
     opacity: 0.7;
-    width: 852px;
-    margin-bottom: 48px;
+    width: 60.86vw;
+    margin-bottom: 3.43vw;
 }
 
 .ins-video{
     box-sizing: border-box;
-    border: 1px solid rgba(13, 19, 33, 0.2);
-    border-radius: 16px;
-    padding: 32px;
-    width: 1140px;
-    height: 614px;
-    margin-bottom: 149px;
+    border: 0.071vw solid rgba(13, 19, 33, 0.2);
+    border-radius: 1.14vw;
+    padding: 2.29vw;
+    width: 81.43vw;
+    height: 43.86vw;
+    margin-bottom: 10.64vw;
 }
 
 .ins-video iframe{
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: url(Jhankar);
+    width:76vw;
+    height:39vw;
 }
 
 .target{
@@ -270,87 +272,88 @@ nav{
     justify-content: flex-start;
     align-items: center;
     padding: 0px;
-
 }
 
 .target-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 32px;
+    font-size: 2.29vw;
     font-weight: 800;
-    line-height: 37px;
+    line-height: 2.64vw;
     letter-spacing: 0%;
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 1.71vw;
 }
 
 .target-description{
-    color: rgb(13, 19, 33);
+    color: rgb(13
+
+, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: center;
-    width: 852px;
+    width: 60.86vw;
     opacity: 0.7;
-    margin-bottom: 48px;
+    margin-bottom: 3.43vw;
 }
 
 .box-container{
     display: flex;
-    gap:24px;
-    margin-bottom: 111px;
+    gap:1.71vw;
+    margin-bottom: 7.93vw;
 }
 
 .box-1{
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: rgba(255, 76, 30, 0.05);
-    padding: 40px;
+    padding: 2.86vw;
 }
 
 .box-2{
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: rgba(0, 76, 232, 0.05);
-    padding: 40px;
+    padding: 2.86vw;
 }
 
 .box-3{
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: rgba(255, 223, 0, 0.05);
-    padding: 40px;
+    padding: 2.86vw;
 }
 
 .box-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 24px;
+    font-size: 1.71vw;
     font-weight: 800;
-    line-height: 36px;
+    line-height: 2.57vw;
     letter-spacing: 0%;
     text-align: left;
-    margin-bottom: 8px;
+    margin-bottom: 0.57vw;
 }
 
 .box-description{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: left;
     opacity: 0.7;
-    width: 284px;
-    margin-bottom: 24px;
+    width: 20.29vw;
+    margin-bottom: 1.71vw;
 }
 
 .box-hlink{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 700;
-    line-height: 19px;
+    line-height: 1.36vw;
     letter-spacing: 0%;
     text-align: left;
     text-decoration-line: underline;
@@ -360,15 +363,15 @@ nav{
     background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("assets/handshake.jpg");
     background-size: cover;
     background-position: center;
-    width: 1140px;
+    width: 81.43vw;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 64px 48px 64px 48px;
-    border-radius: 16px;
-    margin-bottom: 79px;
+    padding: 4.57vw 3.43vw 4.57vw 3.43vw;
+    border-radius: 1.14vw;
+    margin-bottom: 5.64vw;
 }
 
 .support-title{
@@ -378,57 +381,57 @@ nav{
     justify-content:center;
     color: rgb(255, 255, 255);
     font-family: Azeret Mono;
-    font-size: 32px;
+    font-size: 2.29vw;
     font-weight: 700;
-    line-height: 36px;
+    line-height: 2.57vw;
     letter-spacing: 0%;
     text-align: center;
-    margin-bottom: 16px;
+    margin-bottom: 1.14vw;
 }
 
 .support-description{
     color: rgb(255, 255, 255);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 26px;
+    line-height: 1.86vw;
     letter-spacing: 0%;
     text-align: center;
     opacity: 0.7;
-    margin-bottom: 30px;
+    margin-bottom: 2.14vw;
 }
 
 .submit-box{
     display: flex;
-    gap:16px;
+    gap:1.14vw;
 }
 
 .input-box{
     box-sizing: border-box;
-    border: 1px solid rgba(13, 19, 33, 0.15);
-    border-radius: 8px;
+    border: 0.071vw solid rgba(13, 19, 33, 0.15);
+    border-radius: 0.57vw;
     background: rgb(255, 255, 255);
-    padding: 19px 20px 19px 20px;
-    width: 548px;
-    height: 57px;
+    padding: 1.36vw 1.43vw 1.36vw 1.43vw;
+    width: 39.14vw;
+    height: 4.07vw;
     color: rgba(13, 19, 33, 0.4);
     font-family: Azeret Mono;
-    font-size: 16px;
+    font-size: 1.14vw;
     font-weight: 400;
-    line-height: 19px;
+    line-height: 1.36vw;
     letter-spacing: 0%;
     text-align: left;
 }
 
 .submit-btn{
-    border-radius: 8px;
+    border-radius: 0.57vw;
     background: rgb(255, 255, 255);
-    padding: 17px 20px 17px 20px;
+    padding: 1.21vw 1.43vw 1.21vw 1.43vw;
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 20px;
+    font-size: 1.43vw;
     font-weight: 600;
-    line-height: 23px;
+    line-height: 1.64vw;
     letter-spacing: 0%;
     text-align: center;
     cursor: pointer;
@@ -438,281 +441,27 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 16px;
+    border-radius: 1.14vw;
     background: rgba(13, 19, 33, 0.03);
-    padding: 32px 150px 32px 150px;
+    padding: 2.29vw 10.71vw 2.29vw 10.71vw;
 }
 
 .statement{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 20px;
+    font-size: 1.43vw;
     font-weight: 600;
-    line-height: 23px;
+    line-height: 1.64vw;
     letter-spacing: 0%;
     text-align: center;
 }
 
 .icon-gap{
     display: flex;
-    gap: 24px;
+    gap: 1.71vw;
 }
 
-@media screen and (max-width : 576px) {
-    
-    .leftnav{
-        font-size: 10px;
-        line-height: 11px;
-        margin-top: 15px;
-        margin-left: 20px;  
-    }
-    
-    .rightnav{
-        margin-top: 5px;
-        margin-right: 20px; 
-        font-size: 10px;
-        line-height: 11px;
-        padding: 7px 10px 7px 10px;
- 
-    
-    }
-    
-    .banner{
-        background-size: contain;
-        margin-top: 15px;
-    }
-
-    .banner .banner-image{
-        width: 120px;
-        height: 120px;
-
-    }
-    
-    .banner-content{
-        width: 100vw;
-    }
-    
-    .banner-image{
-        margin-top: 26px;
-    }
-    
-    .banner-text{
-        width: 300px;
-        font-size: 15px;
-        line-height: 15px;
-        margin-bottom: 10px;
-    }
-    
-    .banner-description{
-        width: 320px;
-        font-size: 6px;
-        line-height: 8px;
-        margin-bottom: 12px;
-    }
-    
-    .black-btn{
-        font-size: 6px;
-        line-height: 10px;
-        padding: 8px 10px 8px 10px;
-        margin-bottom: 20px;
-    }
-    
-    .purpose-container{
-        padding: 8px 16px 8px 16px;
-        margin-left: 25px;
-        margin-right: 25px;
-        margin-top: 25px;
-        margin-bottom: 30px;
-    }
-    
-    .p-title{
-        font-size: 10px;
-        line-height: 12px;
-        margin-top: 26px;
-        margin-bottom: 10px;
-    }
-    
-    .p-description{
-        font-size: 5px;
-        line-height: 8px;
-        width: 220px;
-        margin-bottom: 16px;
-    }
-    
-    .do_change{
-        width: 250px;
-        padding: 16px;
-        margin-bottom: 5px;
-    }
-
-    .do_change img{
-        height: 100px;
-        width: 100px;
-    }
-    
-    .do_change-title{
-        font-size: 10px;
-        line-height: 12px;
-        width: 130px;
-        margin-bottom: 5px
-    }
-    
-    .do_change-description{
-        font-size: 5px;
-        line-height: 8px;
-        width: 135px;
-        margin-bottom: 12px;
-    }
-    
-    .white_button{
-        padding: 3px 6px 3px 6px;
-        font-size: 6px;
-        line-height: 7px;
-    }
-    
-    .do_help{
-        width: 250px;
-        padding: 16px;
-        gap: 8px;
-        margin-bottom: 5px;
-    }
-
-    .do_help img{
-        height: 100px;
-        width: 100px;
-    }
-    
-    .do_help-title{
-        font-size: 8px;
-        width: 150px;
-        margin-bottom: 8px;
-    }
-    
-    
-    .ins-title{
-        font-size: 12px;
-        margin-bottom: 8px;
-        line-height: 9px;
-    
-    }
-    
-    .ins-description{
-        font-size: 5px;
-        width: 250px;
-        margin-bottom: 16px;
-        line-height: 9px;
-    }
-    
-    .ins-video{
-        padding: 12px;
-        width: 275px;
-        height: 175px;
-        margin-bottom: 50px;
-    }
-
-    .target-title{
-        font-size: 12px;
-        margin-bottom: 8px;
-        line-height: 9px;
-    }
-    
-    .target-description{
-        font-size: 5px;
-        width: 250px;
-        margin-bottom: 16px;
-        line-height: 9px;
-    }
-    
-    .box-container{
-        gap:8px;
-        margin-bottom: 37px;
-    }
-    
-    .box-1{
-        padding: 13px;
-    }
-    
-    .box-2{
-        padding: 13px;
-    }
-    
-    .box-3{
-        padding: 13px;
-    }
-    
-    .box-title{
-        font-size: 8px;
-        margin-bottom: 8px;
-        line-height: 9px;
-    }
-    
-    .box-description{
-        font-size: 6px;
-        width: 85px;
-        margin-bottom: 8px;
-        line-height: 9px;
-    }
-    
-    .box-hlink{
-        font-size: 6px;
-    }
-    
-    .support-container{
-        width: 250px;
-        padding: 20px 16px 20px 16px;
-        margin-bottom: 26px;
-    }
-    
-    .support-title{
-        font-size: 12px;
-        margin-bottom: 6px;
-        line-height: 9px;
-    }
-    
-    .support-description{
-        font-size: 6px;
-        margin-bottom: 10px;
-        line-height: 9px;
-    }
-    
-    .submit-box{
-        gap:8px;
-    }
-    
-    .input-box{  
-        padding: 19px 20px 19px 20px;
-        width: 180px;
-        height: 20px;
-        font-size: 6px;
-        font-weight: 400;
-        line-height: 10px;
-    }
-    
-    .submit-btn{
-        padding: 7px 10px 7px 10px;
-        font-size: 8px;
-    }
-    
-    .footer{
-        padding: 10px 50px 10px 50px;
-    }
-    
-    .statement{
-        font-size: 10px;
-
-    }
-    
-    .icon-gap{
-        gap: 8px;
-    }
-
-    .box-container img{
-        height: 25px;
-        width: 25px;
-    }
-
-    .footer img{
-        height: 20px;
-        width: 20px;        
-    }
+.footer img{
+    height: 3.57vw;
+    width: 3.57vw;
 }
