--- a/style.css
+++ b/style.css
@@ -108,6 +108,11 @@ nav{
     margin-bottom: 6.29vw;
 }
 
+.purpose-container img{
+    height: 15vw;
+    width: 15vw;
+}
+
 
 .purpose{
     display: flex;
@@ -147,10 +152,10 @@ nav{
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
     padding: 3.43vw;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     margin-bottom: 2.29vw;
+    gap:1.43vw;
 }
 
 .do_change-title{
